--- a/T3_Strings_ej_resueltos.ipynb
+++ b/T3_Strings_ej_resueltos.ipynb
@@ -248,7 +248,10 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "year = int(input(\"Introduce tu año de nacimiento: \"))\n",
+        "this_year = int(input(\"Introduce el año actual: \"))\n",
+        "age = this_year - year\n",
+        "print(\"En el año {} tienes {} años\".format(this_year, age))"
       ],
       "metadata": {
         "id": "h1buecaC-LC1"
